--- a/job-spring-batch/src/main/resources/application.yml
+++ b/job-spring-batch/src/main/resources/application.yml
@@ -3,7 +3,7 @@ application:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/spring_batch?useSSL=false&serverTimezone=America/Sao_Paulo&allowPublicKeyRetrieval=true
+    jdbc-url: jdbc:mysql://localhost:3306/spring_batch?useSSL=false&serverTimezone=America/Sao_Paulo&allowPublicKeyRetrieval=true
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -14,3 +14,10 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    
+projeto:
+  datasource:
+    jdbc-url: jdbc:mysql://localhost:3306/batch_projeto?useSSL=false&serverTimezone=America/Sao_Paulo&allowPublicKeyRetrieval=true
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
