--- a/job-spring-batch/src/main/resources/application.yml
+++ b/job-spring-batch/src/main/resources/application.yml
@@ -14,10 +14,23 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    
+
 projeto:
   datasource:
     jdbc-url: jdbc:mysql://localhost:3306/batch_projeto?useSSL=false&serverTimezone=America/Sao_Paulo&allowPublicKeyRetrieval=true
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+batch:
+  job:
+    parameters:
+      arquivoClientes: "file:src/main/resources/clientes.txt"
+
+logging:
+  file:
+    name: ./logs/batch.log
+  logback:
+    rollingpolicy:
+      max-history: 2
+      max-file-size: 1MB
